<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GreenGarden</string>
    <string name="water_button">Agua</string>
    <string name="electricity_button">Electricidad</string>
    <string name="statistics_button">Estadísticas</string>
    <string name="DailyTips_button">Consejos</string>
    <string name="register">Register</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los Términos y Condiciones</string>
    <string name="email">Email</string>
    <string name="back_button">Back Button</string>
    <string name="todo">TODO</string>
    <string name="kilowatthora_kwh">Kilowatthora (kWh)</string>
    <string name="todo1">TODO</string>
    <string name="guardar">Guardar</string>
    <string name="mes">Mes</string>
    <string name="precio">Precio</string>
    <string name="servicio">Servicio</string>
    <string name="consumo">Consumo</string>
    <!-- Otros recursos de cadena -->
</resources>
