<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo1"
        tools:ignore="ImageContrastCheck" />

    <!-- Fondo con desvanecimiento -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.77"
        android:autofillHints=""
        android:background="#C0C0C0" />



    <EditText
        android:id="@+id/editTextKilowatt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/kilowatthora_kwh"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextKilowatt"
        android:autofillHints=""
        android:hint="@string/mes"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextMonth"
        android:hint="@string/precio"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:layout_below="@id/editTextPrice" />


</RelativeLayout>



